Responsiveness fixed on mobile and tablet

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -19,7 +19,7 @@
     border-bottom: 10px solid rgba(255, 0, 0, 0.5);
 }
 
-@media (max-width: 770px) {
+@media (max-width: 900px) {
     .card {
         margin: 2% 0 !important;
     }
